# prosperity4

./: .gitignore  ROUND_3_FINDINGS.txt  manual2.ipynb  optimiser.py  plotter.ipynb  pyproject.toml  testtrader.py  trader.py  trader2.py  trader_round3.py
